--- a/static/css/sign2.css
+++ b/static/css/sign2.css
@@ -35,7 +35,7 @@
 	align-items: center;
 	text-align: center;
 	height: 0.8rem;
-	background: #fff;
+	background: #f7f7f7;
 }
 
 .calendar_month_prev{
