--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,7 +49,7 @@ html,body,#app{
 .header{
     width: 10rem;
     height: 1rem;
-    background-color: #fff;
+    background-color: #FAFAFA;
     font-size: 0.5rem;
     color: #333;
     position: relative;
