--- a/static/css/mint-style.css
+++ b/static/css/mint-style.css
@@ -1291,6 +1291,7 @@ display: inline-block;
     position: absolute;
     bottom: 10px;
     right: -5%;
+    z-index: 2000;
     -webkit-transform: translateX(-50%);
             transform: translateX(-50%);
 }
