--- a/static/css/style.css
+++ b/static/css/style.css
@@ -118,3 +118,316 @@ html,body,#app{
     height: 2rem;
   
   }
+
+  
+
+  .mint-cell{
+    background-color: transparent !important;
+  }
+  .mint-radio-input:checked + .mint-radio-core::after{
+    background-color: #B22329 !important;
+  }
+  .mint-radio-input:checked + .mint-radio-core{
+    background-color: #fff !important;
+    border-color: #ccc !important;
+  }
+  .mint-radio-core::after{
+    top: 2px !important;
+    left: 2px !important;
+    width: 14px !important;
+    height: 14px !important;
+  }
+  .mint-cell-wrapper,.mint-cell:last-child{
+    background: none !important;
+  }
+  .mint-cell{
+    min-height: auto !important;
+    margin-top: 0.2rem;
+  }
+
+  .loginInput .mint-radiolist-label{
+    padding: 0 !important;
+  }
+  .loginInput .mint-cell-wrapper{
+    padding: 0 !important;
+  }
+
+
+  .mui-preview-image.mui-fullscreen {
+    position: fixed;
+    z-index: 200000;
+    background-color: #000;
+  }
+  .mui-preview-header,
+  .mui-preview-footer {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    z-index: 10;
+  }
+  .mui-preview-header {
+    display: flex;
+    justify-content: space-between;
+    height: 44px;
+    top: 0;
+    padding-top: 0.3rem;
+  }
+  .mui-preview-header span:nth-child(2){
+    padding-right: 0.3rem;
+    color: #fff;
+    font-size: 0.7rem;
+  }
+  .mui-preview-footer {
+    height: 50px;
+    bottom: 0px;
+  }
+  .mui-preview-header .mui-preview-indicator {
+    display: block;
+    line-height: 25px;
+    color: #fff;
+    text-align: center;
+    margin: 15px auto 4;
+    width: 70px;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 12px;
+    font-size: 16px;
+  }
+  .mui-preview-image {
+    display: none;
+    -webkit-animation-duration: 0.5s;
+    animation-duration: 0.5s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+  }
+  .mui-preview-image.mui-preview-in {
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
+  }
+  .mui-preview-image.mui-preview-out {
+    background: none;
+    -webkit-animation-name: fadeOut;
+    animation-name: fadeOut;
+  }
+  .mui-preview-image.mui-preview-out .mui-preview-header,
+  .mui-preview-image.mui-preview-out .mui-preview-footer {
+    display: none;
+  }
+  .mui-zoom-scroller {
+    position: absolute;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    -webkit-backface-visibility: hidden;
+  }
+  .mui-zoom {
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+  }
+  .mui-slider .mui-slider-group .mui-slider-item img {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .mui-android-4-1 .mui-slider .mui-slider-group .mui-slider-item img {
+    width: 100%;
+  }
+  .mui-android-4-1 .mui-slider.mui-preview-image .mui-slider-group .mui-slider-item {
+    display: inline-table;
+  }
+  .mui-android-4-1 .mui-slider.mui-preview-image .mui-zoom-scroller img {
+    display: table-cell;
+    vertical-align: middle;
+  }
+  .mui-preview-loading {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: none;
+  }
+  .mui-preview-loading.mui-active {
+    display: block;
+  }
+  .mui-preview-loading .mui-spinner-white {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -25px;
+    margin-top: -25px;
+    height: 50px;
+    width: 50px;
+  }
+  .mui-preview-image img.mui-transitioning {
+    -webkit-transition: -webkit-transform 0.5s ease, opacity 0.5s ease;
+    transition: transform 0.5s ease, opacity 0.5s ease;
+  }
+  @-webkit-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @-webkit-keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  @keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  .mui-preview-image p img {
+    max-width: 100%;
+    height: auto;
+  }
+
+
+  .imgShare{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(200,200,200,0.5);
+    z-index: 10;
+  }
+  .imgShare>.top{
+    height: 3.4rem;
+    width: 10rem;
+    position: fixed;
+    left: 0;
+    bottom: 1.4rem;
+    background: rgba(200,200,200,0.7);
+    display: flex;
+    justify-content: space-around;
+    padding-top: 0.5rem;
+    
+  }
+  .imgShare>.bottom{
+    height: 1.4rem;
+    width: 10rem;
+    position: fixed;
+    left: 0;
+    bottom: 0rem;
+    background: rgba(220,220,220,1);
+    text-align: center;
+    line-height: 1.4rem
+  }
+
+.imgShare>.top>.weixin{
+  width: 2rem;
+  height: 2rem;
+  display: block;
+  background:#fff url('../img/weixin.png') no-repeat center;
+  background-size: 1.4rem 1.4rem;
+  border-radius: 0.2rem;
+  position: relative;
+}
+.imgShare>.top>.weixin::after{
+  content: '微信好友';
+  position: absolute;
+  display: block;
+  width: 2rem;
+  height: 0.8rem;
+  line-height: 0.8rem;
+  text-align: center;
+  bottom: -0.8rem;
+  left: 0;
+  font-size: 0.4rem;
+}
+.imgShare>.top>.friend{
+  width: 2rem;
+  height: 2rem;
+  display: block;
+  background:#fff url('../img/friend.png') no-repeat center;
+  background-size: 1.4rem 1.4rem;
+  border-radius: 0.2rem;
+  position: relative;
+}
+.imgShare>.top>.friend::after{
+  content: '朋友圈';
+  position: absolute;
+  display: block;
+  width: 2rem;
+  height: 0.8rem;
+  line-height: 0.8rem;
+  text-align: center;
+  bottom: -0.8rem;
+  left: 0;
+  font-size: 0.4rem;
+}
+.imgShare>.top>.zhifubao{
+  width: 2rem;
+  height: 2rem;
+  display: block;
+  background:#fff url('../img/zhifubao.png') no-repeat center;
+  background-size: 1.4rem 1.4rem;
+  border-radius: 0.2rem;
+  position: relative;
+}
+.imgShare>.top>.zhifubao::after{
+  content: '支付宝';
+  position: absolute;
+  display: block;
+  width: 2rem;
+  height: 0.8rem;
+  line-height: 0.8rem;
+  text-align: center;
+  bottom: -0.8rem;
+  left: 0;
+  font-size: 0.4rem;
+}
+
+.imgShare>.top>.download{
+  width: 2rem;
+  height: 2rem;
+  display: block;
+  background:#fff url('../img/sharedownload.png') no-repeat center;
+  background-size: 1.4rem 1.4rem;
+  border-radius: 0.2rem;
+  position: relative;
+}
+.imgShare>.top>.download::after{
+  content: '下载';
+  position: absolute;
+  display: block;
+  width: 2rem;
+  height: 0.8rem;
+  line-height: 0.8rem;
+  text-align: center;
+  bottom: -0.8rem;
+  left: 0;
+  font-size: 0.4rem;
+}
