--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,13 +10,17 @@ a{
 html,body,#app{
   width: 100%;
   height: 100%;
+  background: #fff;
 }
 
+.infoPage>.content img{
+  width: 8.1rem !important;
+}
 
 /* tabbar */
 .tabItem.is-selected{
     color: #B42B30;
-    background:#fff;
+    background:#F7F7F7;
     }
     
     .tabbar{
@@ -25,7 +29,7 @@ html,body,#app{
       height: 1.2rem;
       bottom: 0rem;
       left: 0;
-      background: #fff;
+      background: #F7F7F7;
       box-shadow: 0 -0.05rem 0.05rem #ccc;
       display: flex;
       font-size: 0.3rem;
@@ -59,7 +63,7 @@ html,body,#app{
     top: 0;
     left: 0;
     z-index: 100000;
-    box-shadow: 0 0.05rem 0.05rem #ccc;
+    /* box-shadow: 0 0.05rem 0.05rem #ccc; */
   }
   .header>.left,.header>.right{
     width: 3rem;
