--- a/static/css/style.css
+++ b/static/css/style.css
@@ -115,12 +115,13 @@ html,body,#app{
 
 
   .headerzhanwei{
+    width: 100%;
     height: 1rem;
   }
   
   .zhanwei{
     height: 2rem;
-  
+    width: 100%;
   }
 
   
